GJ- 254 More snowflake (#30)
* Start chapter 4 notes

* Minor Chapter 4 additions

* Add Snowflake section 5

* Section 6 Snowflake

* Start Snowflake section 7

* Make timeseries notes a draft

* Render

--- a/posts/software/snowflake/snowpro_notes.qmd
+++ b/posts/software/snowflake/snowpro_notes.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Snowflake: SnowPro Core"
 description: "Snowflake? Snow Problem."
-date: "2025-02-02"
+date: "2025-02-11"
 # image: "deep_learning_model.png"
 categories: [Software, DataEngineering]
 ---
@@ -31,13 +31,11 @@ It is cloud only. No on premise option.
 
 - Data warehouse
 - Data lake - mix of structured and semi structured data
-- Data science - use  yourpreferred language via *Snowpark*
-
+- Data science - use your preferred language via *Snowpark*
 
 
 # 2. Snowflake Architecture 
-
-## 2.1. Multi-cluster Shared Disk
+## 2.1. Multi-Cluster Shared Disk
 In general, there are two approaches to designing a dsitributed data / compute platform: shared-disk and shared-nothing.
 
 **Shared-disk** uses *central data storage* connected to *multiple compute nodes*. 
@@ -664,17 +662,635 @@ You can then use the `REMOVE` command to delete from the internal stage.
 
 
 # 4. Data Transformation
+## 4.1. Transformations and Functions
+
+We can specify transformations in the `SELECT` statement of the `COPY` command. 
+
+This can simplify ETL pipelines when performing simple transformations such as: column reordering, casting data types, removing columns, truncating strings to a certain length.
+We can also use a subset of SQL functions inside the COPY command. Supports most standard SQL functions defined in SQL:1999.
+
+Snowflake does **not** support more complex SQL inside the COPY command, such as  FLATTEN, aggregations, GROUP BY, filtering with WHERE, JOINs.
+
+Supported functions:
+
+- Scalar functions. Return one value per row. E.g. `DAYNAME`
+- Aggregate functions. Return one value per group / table. E.g. `MAX`.
+- Window functions. Aggregate functions that return one value per row. E.g. `SELECT ORDER_ID, SUBCATEGORY, MAX(amount) OVER (PARTITION BY SUBCATEGORY) FROM ORDERS;`
+- Table functions. Return multiple rows per input row. E.g. `SELECT * FROM TABLE(VALIDATE(table_name, JOB_ID => ‘_last’))`
+- System functions. Control and information functions. E.g. `SYSTEM$CANCEL_ALL_QUERIES`
+- UDFs. User-defined functions.
+- External functions. Stored and executed outside of Snowflake.
+
+
+## 4.2. Estimation Functions
+
+Exact calculations on large tables can be very compute-intensive or memory-intensive.
+Sometimes an estimate is good enough.
+
+Snowflake has some algorithms implemented out of the box that can give useful estimates with fewer resources.
+
+
+### 4.2.1. Number of Distinct Values - `HLL()`
+HyperLogLog algorithm. 
+
+Average error is ~1.6%.
+
+Replace
+```
+COUNT(DISTINCT (col1, col2, ...))
+```
+
+with
+```
+HLL(col1, col2, ...)
+```
+
+or 
+```
+APPROX_COUNT_DISTINCT (col1, col2, ...)
+```
+
+
+### 4.2.2. Frequent Values - `APPROX_TOP_K()`
+Estimate the most frequent values and their frequencies.
+Space-saving algorithm.
+
+Use the following command. 
+The `k` argument is optional and defaults to 1.
+The `counters` argument is optional and specifies the maximum number of distinct values to track. If using this, we should use `counters >> k`.
+
+```
+APPROX_TOP_K (col1, k[optional], counters[optional])
+```
+
+
+### 4.2.3. Percentile Values - `APPROX_PERCENTILE()`
+t-Digest algorithm.
+
+```
+APPROX_PERCENTILE (col1, percentile)
+```
+
+
+### 4.2.4. Similarity of Two or More Data Sets - `MINHASH & APPROXIMATE_SIMILARITY()`
+The full calculation uses the Jaccard similarity cofficient. This returns a value between 0 and 1 indicating similarity.
+$$
+J(A, B) = |(A \cap B)| / |A \cup B|
+$$
+
+The approximation is a two-step process that uses the MinHash algorithm to hash each table, then the `APPROXIMATE_SIMILARITY` function to estimate $J(A, B)$.
+
+The argument `k` in MINHASH is the number of hash functions to use. Higher `k` is more accurate but slower. We can pass individual column names instead oif `*`.
+```
+SELECT MINHASH(k, *) AS mh FROM table_name;
+```
+
+The full approximation command is:
+```
+SELECT APPROXIMATE_SIMILARITY(mh)
+FROM (
+    SELECT MINHASH(100, *) AS mh FROM mhtab1
+    UNION ALL
+    SELECT MINHASH(100, *) AS mh FROM mhtab2
+);
+```
+
+
+## 4.3. User-Defined Functions (UDF)
+These are one of several ways of extending functionality with additional functions. 
+
+(The other approaches are stored procedures and external functions, which are covered in the next sections.)
+
+UDFs support the following languages: **SQL, Python, Java, JavaScript**
+
+### 4.3.1. Defining a UDF
+We can define a SQL UDF using `create function`.
+
+```
+CREATE FUNCTION add_two(n int)
+returns int
+    AS
+    $$
+    n+2
+    $$;
+```
+
+Defining a UDF in Python is similar, we just need to specify the `language` and some other options.
+
+```
+CREATE FUNCTION add_two(n int)
+returns int
+language Python
+runtime_version =‘3.8’
+handler = ‘addtwo’ 
+    AS
+    $$
+    def add_two(n):
+        return n+2
+    $$;
+```
+
+### 4.3.2. Using a UDF
+We just call the UDF from SnowSQL, for example
+
+```
+SELECT add_two(3);
+```
+
+### 4.3.3. Function Properties
+Functions can be:
+
+- **Scalar functions**: Return *one output row* per input row. 
+- **Tabular functions**: Return a *table* per input row. 
+
+Functions are *schema-level* objects in Snowflake. 
+We can see them under `Schema.Public.Functions`.
+
+We can manage access and grant privileges to functions, just like any other Snowflake object. 
+
+
+## 4.4. Stored Procedures 
+
+Another way of extending functionality, like UDFs. 
+
+**UDF vs stored procedures**:
+- UDF is typically used to **calculate** a value. It *needs to return a value*. No need to have access to the objects referenced in the function. 
+- A stored procedure is typically used for **database operations** like INSERT, UPDATE, etc. It *doesn’t need to return a value*. 
+
+Can rely on the *caller's or the owner's access rights*. 
+
+Procedures are *securable objects* like functions, so we can grant access to them. 
+
+Supported languages:
+
+- Snowflake scripting - Snowflake SQL + procedural logic
+- JavaScript 
+- Snowpark API - Python, Scala, Java
+
+
+### 4.4.1. Creating a Stored Procedure
+```
+CREATE PROCEDURE find_min(n1 int, n2 int)
+returns int
+language sql
+    AS
+    BEGIN
+    IF (n1 < n2)
+        THEN RETURN n1;
+        ELSE RETURN n2;
+    END IF;
+    END;
+```
+
+Stored procedures can be run with the caller’s rights or the user’s rights. This is defined with the stored procedure. 
+By default, they run as *owner* but we can override this with:
+```
+execute as caller
+```
+
+
+### 4.4.2. Calling a Stored Procedure
+```
+CALL find_min(5,7)
+```
+
+We can reference **dynamic values**, such as variables in the user's sessions, in stored procedures.
+- If *argument* is referenced in SQL, use `:argname`
+- If an object such as a table is referenced, use `IDENTIFIER(:table_name)`
+
+
+## 4.5. External Functions
+These are user-defined functions that are **stored and executed outside of Snowflake**.
+Remotely executed code is referred to as a “remote service”.
+
+This means it can reference third-party libraries, services and data. 
+
+Examples of external API integrations are: AWS lambda function, Microsoft Azure function, HTTPS server. 
+
+```
+CREATE EXTERNAL FUNCTION my_func(string_col VAR_CHAR)
+returns variant
+api_integration = azure_external_api_integration
+AS 'https://url/goes/here'
+```
+
+Security-related information is stored in an API integration. 
+This is a schema-level object, so it is securable and can be granted access to .
+
+Advantages:
+
+- Can use other languages 
+- Access 3rd-party libraries
+- Can be called from elsewhere, not just Snowflake, so we can have one central repository. 
+
+Limitations:
+
+- Only scalar functions
+- Slower performance - overhead of external functions
+- Not shareable
+
+
+## 4.6. Secure UDFs and Procedures
+
+We may want to hide certain information such as the function definition, 
+or prevent users from seeing underlying data. 
+
+We just use the `SECURE` keyword. 
+
+```
+CREATE SECURE FUNCTION ...
+```
+
+Disadvantages:
+- Lower query performance. The optimiser exposes some security risks, so this is locked down which restricts the optimisation options available therefore impacting performance lock this down the optimisations are restricted. 
+
+We should use it for sensitive data, otherwise the performance trade-off isn’t worthwhile. 
+
+
+## 4.7. Sequences
+Sequences are typically used for `DEFAULT` values in `CREATE TABLE` statements. 
+Sequences are **not** guaranteed to be *gap-free*. 
+
+Sequences are *securable objects* that we can grant privileges to.
+
+```
+CREATE SEQUENCE my_seq
+START = 1
+INCREMENT = 1
+```
+
+Both `START` and `INCREMENT` default to 1.
+
+We invoke a sequence with `my_seq.nextval`. For example:
+
+```
+CREATE TABLE my_table(
+    id int DEFAULT my_seq.nextval,
+    first_name varchar
+    last_name varchar
+);
+
+INSERT INTO my_table(first_name, last_name)
+VALUES ('John', 'Cena'), ('Dwayne', 'Johnson'),('Steve','Austin');
+```
+
+
+## 4.8. Semi-structured Data
+### 4.8.1. What is Semi-structured Data?
+Semi-structured data has **no fixed schema**, but contains *tags/labels* and has a *nested structure*. 
+
+This is in contrast to structured data like a table. 
+Or unstructured data which is a free-for-all. 
+
+**Supported formats: json, xml, parquet, orc, avro**
+
+Snowflake deals with unstructured data using 3 different data types:
+
+- Object - think of this in the JavaScript sense, i.e. key:value pairs
+- Array
+- Variant - this can store data of any other type, including arrays and objects. Native support for semi-structured data.  
+
+We typically let Snowflake convert semi-structured data into a *hierarchy of arrays and objects* within a **variant object**. 
+
+Nulls and non-native strings like dates are *cast to strings* within a variant. 
+
+Variant can store up to **16 MB per row**. 
+If the data exceeds this, we will need to restructure or split the input. 
+
+The standard “ELT” approach (Extract, Load, Transform) for semi-structured data is to load the data as is, then transform it later once we’ve eyeballed it. 
+This is a tweak of the classic ETL approach. 
+
+We often need to `FLATTEN` the data.
+
+
+### 4.8.2. Querying Semi-structured Data
+
+To access elements of a `VARIANT` column, we use a `:`. 
+
+For example, if the `raw_column` column has a top-level key of `heading1`, we can query:
+```
+SELECT raw_column:heading1
+FROM table_with_variant
+```
+
+We can also refer to columns by their position. So to access the first column:
+```
+SELECT $1:heading1
+FROM table_with_variant
+```
+
+To access **nested** elements, use `.`:
+```
+SELECT raw_column:heading1.subheading2
+FROM table_with_variant
+```
+
+If there is an array, we can **access elements of the array** with `[index]`. Arrays are 0-indexed, so to access the first element:
+```
+SELECT raw_column:heading1.subheading2.array_field[0]
+FROM table_with_variant
+```
+
+We may also need to **cast the types** of the element with `::`
+```
+SELECT raw_column:heading1.subheading2.array_field[0]::VARCHAR
+FROM table_with_variant
+```
+
+
+### 4.8.3. Flatten Hierarchical Data
+
+
+### 4.8.4. Insert JSON Data
+
+
+## 4.9. Unstructured Data
+
+
+## 4.10. Data Sampling
+
+
+## 4.11. Tasks
+
+
+## 4.12. Streams
+
 
 
 # 5. Snowflake Tools and Connectors
 
+## 5.1. Connectors and Drivers
+
+Snowflake provides two interfaces:
+
+- Snowsight web UI
+- SnowSQL command line tool
+
+Drivers:
+
+- Go
+- JDBC
+- .NET
+- node.js
+- ODBC
+- PHP
+- Python
+
+Connectors:
+
+- Python
+- Kafka
+- Spark
+
+**Partner Connect** allows us to create a trial account for third-party add-ons to Snowflake and integrate them with Snowflake. 
+
+They span many different categories and tools - BI, CI/CD, etc.
+
+
+## 5.2. Snowflake Scripting
+
+Mostly used in stored procedures but can also be used for writing procedural code outside of this. 
+
+We can use@ if, case, for, repeat, while, loop
+
+This is written in a **“block”**:
+```
+DECLARE
+BEGIN 
+EXCEPTION
+END
+```
+
+`DECLARE` and `EXCEPTION` are optional. 
+
+This is available in Snowsight. 
+The classic UI or SnowSQL requires `$$` around the block. 
+
+**Objects** created in the block are *available outside* of it too. 
+**Variables** created in the block can only be used *inside* it. 
+
+This is a similar syntax, but different from **transactions** which use `BEGIN` and `END`. 
+
+
+## 5.3. Snowpark
+Snowpark API provides support for three programming languages: *Python, Java, Scala*. 
+
+Python code **converts to SQL** which then queries Snowflake with serverless Snowflake engine. 
+
+This means there is **no need to move data outside of Snowflake**. 
+
+Benefits:
+
+- Lazy evaluation
+- Pushdown - query is executed in Snowflake rather than unloading all data outside of Snowflake and then transforming
+- UDFs can be defined inline
 
 
 # 6. Continuous Data Protection
 
+This section covers the data protection lifecycle. 
+From most accessible to least accessible:
+
+```{mermaid}
+flowchart LR
+
+  A(Current data storage) --> B(Time travel) --> C(Fail safe)
+```
+
+
+## 6.1. Time Travel
+
+What if someone drops a database or table accidentally? We need a **backup to recover data**.
+*Time travel* enables accessing historical data. 
+
+We can:
+
+- Query data that has been deleted or updated
+- Restore dropped tables, schemas and databases
+- Create clones of tables, schemas and databases from a previous date 
+
+We can use a SQL query to access time travel data within a retention period. The `AT` keyword allows us to time travel. 
+```
+SELECT * 
+FROM table
+AT (TIMESTAMP >= timestamp)
+```
+
+Or use `OFFSET` in seconds. So for 10 minutes:
+```
+SELECT * 
+FROM table 
+AT (OFFSET >= 10*60)
+```
+
+Alternatively we can use `BEFORE`, where *query_ID* is the ID where we messed things up:
+```
+SELECT * 
+FROM table 
+BEFORE (STATEMENT>= query_id)
+```
+
+Go to `Activity -> Query History` in the Snowsight UI to get the correct query ID. 
+
+It is best practice to **recover to an intermediate backup table first** to confirm the recovered version is correct. E.g.
+```
+CREATE OR REPLACE TABLE table_name_backup
+FROM table
+AT (TIMESTAMP >= timestamp)
+```
+
+
+## 6.2. UNDROP
+
+We can use the `UNDROP` keyword to recover objects.
+```
+UNDROP TABLE table_name
+```
+
+Same for `SCHEMA` or `DATABASE`.
+
+Considerations. 
+
+- UNDROP fails if an object with the **same name already exists**. 
+- We need **ownership privileges** to UNDROP an object. 
+
+When working with time zones, it can be helpful to change the time zone to match your local time. 
+This only affects the current session, not the whole account.  
+```
+ALTER SESSION SET TIMEZONE = 'UTC'
+```
+
+
+## 6.3. Retention Period 
+
+Retention period is the number of days for which historical data is preserved. 
+This determines how far back we can time travel. 
+
+The retention period is configurable for table, schema, database or account. 
+
+The default `DATA_RETENTION_TIME_IN_DAYS=1`.
+If we want to disable time travel, we can set this to 0. 
+
+We can set this when we create a table, or alter it for an existing table:
+```
+ALTER TABLE table_name (
+    SET DATA_RETENTION_TIME_IN_DAYS=2
+)
+```
+
+We can set a *minimum value* at the account level:
+```
+ALTER ACCOUNT SET 
+MIN_ DATA_RETENTION_TIME_IN_DAYS=3
+```
+
+The **account type determines the maximum retention period**:
+
+- Standard: up to 1 day
+- Enterprise or higher: up to 90 days
+
+
+## 6.4. Fail Safe
+
+This is for **disaster recovery** beyond time travel.
+This is not configurable and set to 7 days beyond time travel period for permanent tables. 
+
+We as **users cannot access this data**. We have to **contact Snowflake support** to restore it for us. 
+
+
+## 6.5. Storage Costs
+
+Time travel and fail safe contribute to storage costs. 
+You only pay for what is modified. 
+
+
+You can see the breakdown in the `Admin -> Usage` tab of the UI.
+
+You can see how much storage is being used with:
+```
+SELECT * 
+FROM SNOWFLAKE_ACCOUNT_USAGE.TABLE_STORAGE_METRICS
+```
+
+
+## 6.6. Table Types
+
+The following table summarises the differences between the 3 types of table.
+
+| Table Type | Command                | Time Travel Retention Period | Fail Safe | Use Case                                                                                                   |
+|------------|------------------------|------------------------------|-----------|------------------------------------------------------------------------------------------------------------|
+| Permanent  | CREATE TABLE           | 0-90                         | Y         | Standard tables. Persist data until dropped.                                                               |
+| Transient  | CREATE TRANSIENT TABLE | 0-1                          | N         | For large tables that do not need to be protected. Persist data until dropped.                             |
+| Temporary  | CREATE TEMPORARY TABLE | 0-1                          | N         | Non-permanent data just for this session.Only in session - data is deleted after the worksheet is closed.  |
+
+These types are **also available for other Snowflake objects**: tables, stages, schema, database. 
+
+If a **database** is transient, **so are all of its objects**. 
+
+**Temporary table names** do not clash with permanent or transient tables. 
+The temporary table name takes precedence in the session and hides the others with the same name.
+
+It is **not possible to change the type** of an existing object. 
+
 
 
 # 7. Zero-Copy Cloning and Sharing
+
+## 7.1. Zero Copy Cloning
+
+Zero copy cloning makes it easy to **copy an existing object** in a **storage-efficient** way. 
+
+For example:
+```
+CREATE TABLE table_name
+CLONE table_source
+```
+
+We can clone almost* any object: database, schema, table, stream, file format, sequence, task, stage, pipe.
+
+> *the exceptions are:
+>
+> - **pipes** which can only be cloned if referencing an **external stage**
+> -  **stages** which cannot be cloned for **named internal stages**
+
+
+When we clone a database or schema, **all of its child objects are also cloned**. 
+
+![Zero Copy Clone](zero_copy_clone.png)
+
+It’s called a "zero copy clone" because it *does not actually copy the data at clone time*. 
+It is a **metadata operation** occurring in the cloud service layer. 
+
+The “copy” is a snapshot of the “original”. 
+**Both reference the same underlying micro-partitions** in block storage. 
+Think of it like pass-by-reference rather than pass-by-value. 
+
+When modifying the “copy” **Snowflake only stores the deltas**, not the entire database again. 
+The “original” and “copy” can be **modified independently** without affecting the other. 
+
+A typical use case is to create backups for dev work. 
+
+We can clone from a time travel version of a table:
+```
+CREATE TABLE table_new
+CLONE table_source
+BEFORE (TIMESTAMP >= ‘2025-01-31 08:00:00’)
+```
+
+
+## 7.2. Privileges
+
+The **privileges of the CHILD objects are inherited from the clone source**, but the **privileges of the cloned object itself are NOT inherited** (i.e. the cloned database or schema). They need to be specified separately by the administrator. 
+
+The privileges required to clone an object depends on the object:
+
+- Table: SELECT privileges 
+- Pipe, stream, task: OWNER privileges 
+- All other objects: USAGE privileges 
+
+When we clone a table, its **load history metadata is NOT copied**. 
+This means loaded data can be loaded again without causing a metadata clash. 
+
 
 
 # 8. Account and Security
