--- a/posts/software/snowflake/snowpro_notes.qmd
+++ b/posts/software/snowflake/snowpro_notes.qmd
@@ -913,6 +913,8 @@ Sequences are **not** guaranteed to be *gap-free*.
 
 Sequences are *securable objects* that we can grant privileges to.
 
+It is a **schema object** like: Functions, Stored Procedures, Tables, File Formats, Stages, Stored Procedures, UDFs, Views, and Materialized Views.
+
 ```
 CREATE SEQUENCE my_seq
 START = 1
@@ -1181,7 +1183,7 @@ ALTER TABLE table_name (
 We can set a *minimum value* at the account level:
 ```
 ALTER ACCOUNT SET 
-MIN_ DATA_RETENTION_TIME_IN_DAYS=3
+MIN_DATA_RETENTION_TIME_IN_DAYS=3
 ```
 
 The **account type determines the maximum retention period**:
@@ -1231,7 +1233,6 @@ If a **database** is transient, **so are all of its objects**.
 The temporary table name takes precedence in the session and hides the others with the same name.
 
 It is **not possible to change the type** of an existing object. 
-
 
 
 # 7. Zero-Copy Cloning and Sharing
@@ -1292,6 +1293,7 @@ When we clone a table, its **load history metadata is NOT copied**.
 This means loaded data can be loaded again without causing a metadata clash. 
 
 
+## 7.3. Data Sharing
 
 # 8. Account and Security
 
