--- a/posts/ml/ml_fundamentals/part1/ml_fundamentals.ipynb
+++ b/posts/ml/ml_fundamentals/part1/ml_fundamentals.ipynb
@@ -32,6 +32,7 @@
     "\n",
     "Supervised vs unsupervised\n",
     "\n",
+    "Classification vs Regression tasks\n",
     "\n",
     "## 2. The Training Loop\n",
     "\n",
